    other/silk/Bombyx mori/Bucciarelli-SPP_FA_Unex.yml
    other/silk/Bombyx mori/Bucciarelli-SN_FA.yml
  new data
    main/He/Smith.yml
    main/H2/Smith.yml
    main/O2/Smith.yml
    main/CO1/Smith.yml
    main/Kr/Smith.yml
    main/Na/Smith.yml
    main/K/Smith.yml
    main/Mo/Kirillova.yml
    main/Cs/Ives.yml
    main/Rb/Ives.yml
    main/K/Ives.yml
    main/Na/Ives.yml
  updated data
    all data co-authored by J. I. Larruquert: add deposition temperature and specs
    main/Al/Larruquert.yml: references
    main/Na/Inagaki.yml: references, specs
    main/Li/Inagaki.yml: references, specs


============================== 2018-02-10 ==============================

  !!! update of database structure !!! 
    added "info" - optional additional information that can be associated with shelves, books and pages
    informatin is stored in .html files located in the '/info' folder
    "info" key is used in the 'library.yml' for specifying the path to the corresponding .html file
    data files ('.yml') are moved from '/' to '/data' folder
    "path" key is replaced by "data" in 'library.yml'
    "INFO" key is replaced by "SPECS" in data files
  new/updated data
    glass/cdgm/* - updated to the latest zemax catalog
    glass/sumita/* - updated to the latest zemax catalog
    glass/hoya/* - updated to the latest zemax catalog
    glass/schott/* - updated to the latest zemax catalog
    glass/ohara/* - updated to the latest zemax catalog
    glass/hikari/* - updated to the latest zemax catalog
  updated data (thanks to Hui Zhang, Pekin University, China, for providing numerical data in YAML format!)
    main/MoS2/Zhang.yml
  bug fixes
    main/MoO3/Vos.yml: references
    main/MoS2/Yim-1.99um.yml: references
    main/MoS2/Yim-3.01um.yml: references
    main/MoS2/Yim-19.88um.yml: references
    main/MoS2/Beal.yml: references
    main/MoSe2/Beal.yml: references
    main/MoTe2/Beal.yml: references