@@ -1,0 +1,25 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "J. Monin and G.-A. Boutry. Optical and photoelectric properties of alkali metals, <a href=\"https://doi.org/10.1103/PhysRevB.9.1309\"><i>Phys. Rev. B</i> <b>9</b>, 1309-1327 (1974)</a>"
+COMMENTS: "195 K (-78.15 °C)"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2536 0.907 0.157
+        0.2654 0.893 0.167
+        0.2804 0.876 0.173
+        0.3025 0.836 0.180
+        0.3340 0.761 0.197
+        0.3660 0.667 0.233
+        0.4060 0.533 0.318
+        0.4358 0.432 0.426
+        0.4600 0.368 0.533
+        0.4916 0.315 0.678
+        0.5100 0.297 0.756
+        0.5460 0.269 0.906
+        0.5780 0.250 1.029
+        0.6200 0.242 1.182
+SPECS:
+    temperature: 195 K
