@@ -1,0 +1,24 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "J. Monin and G.-A. Boutry. Optical and photoelectric properties of alkali metals, <a href=\"https://doi.org/10.1103/PhysRevB.9.1309\"><i>Phys. Rev. B</i> <b>9</b>, 1309-1327 (1974)</a>"
+COMMENTS: "293 K (19.85 °C)"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2536 0.044 0.613
+        0.2654 0.042 0.713
+        0.2804 0.041 0.830
+        0.3130 0.045 1.053
+        0.3340 0.049 1.184
+        0.3660 0.057 1.360
+        0.4060 0.060 1.574
+        0.4358 0.062 1.741
+        0.4600 0.063 1.860
+        0.4916 0.062 2.030
+        0.5460 0.056 2.310
+        0.5780 0.049 2.460
+        0.6200 0.039 2.730
+SPECS:
+    temperature: 293 K
