@@ -1,0 +1,53 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "U. S. Whang, E. T. Arakawa, T. A. Callcott. Optical properties of Rb between 3.3 and 10.5 eV, <a href=\"https://doi.org/10.1103/PhysRevB.5.2118\"><i>Phys. Rev. B</i> <b>5</b>, 2118-2124 (1972)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.1165 1.041 0.027
+        0.1192 1.030 0.028
+        0.1218 1.030 0.030
+        0.1235 1.020 0.031
+        0.1254 1.020 0.033
+        0.1280 1.020 0.035
+        0.1320 1.010 0.038
+        0.1351 1.010 0.040
+        0.1399 1.000 0.044
+        0.1462 0.997 0.050
+        0.1520 0.990 0.055
+        0.1543 0.988 0.057
+        0.1578 0.985 0.060
+        0.1606 0.983 0.062
+        0.1636 0.980 0.065
+        0.1670 0.978 0.068
+        0.1700 0.976 0.071
+        0.1780 0.970 0.077
+        0.1837 0.965 0.080
+        0.1875 0.962 0.081
+        0.1942 0.955 0.081
+        0.2015 0.947 0.080
+        0.2044 0.944 0.079
+        0.2145 0.932 0.076
+        0.2214 0.928 0.073
+        0.2305 0.908 0.071
+        0.2400 0.891 0.069
+        0.2461 0.877 0.070
+        0.2544 0.855 0.070
+        0.2613 0.837 0.072
+        0.2750 0.790 0.075
+        0.2889 0.739 0.080
+        0.3000 0.697 0.086
+        0.3105 0.648 0.093
+        0.3256 0.570 0.106
+        0.3359 0.510 0.119
+        0.3434 0.465 0.136
+        0.3563 0.385 0.179
+        0.3620 0.350 0.211
+        0.3695 0.293 0.258
+        0.3740 0.262 0.292
+        0.3800 0.216 0.346
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
